# mycelium

./: .env_example  .gitattributes  .gitignore  Makefile  README.md  authentik-base.yml  docker-compose.yml  setup_env.sh
backend/: Dockerfile  README.md  docker-compose.supabase.yml  docker-compose.yml  pyproject.toml
backend/app/: config.py  database.py  llm.py  main.py
backend/app/api/: data_contracts.py
backend/app/auth/: __init__.py
backend/app/auth/flows/: login.py  register.py  token.py
backend/app/auth/providers/: authentik.py
backend/app/auth/utils/: cookies.py  security.py
backend/app/crud/: data_contract.py  data_contracts.py
backend/app/database/: base.py  manager.py
backend/app/middleware/: auth.py
backend/app/models/: data_contract.py  data_contracts.py
backend/app/routers/: auth.py  data_contract.py  data_contracts.py  schema.py  template.py
backend/app/schemas/: data_contract_create.py  data_contract_delete.py  data_contract_get.py  data_contract_list.py  data_contract_update.py  data_contracts.py  example_object.py  field_object.py  info_object.py  model_object.py  server_object.py  service_level_object.py  term_object.py
backend/app/schemas/auth/: __init__.py
backend/app/schemas/crud/: data_contract_create.py  data_contract_delete.py  data_contract_get.py  data_contract_list.py  data_contract_update.py
backend/app/schemas/data_contract/: config_object.py  contact_object.py  data_contract.py  definition_object.py  example_object.py  field_object.py  info_object.py  model_object.py  quality_object.py  server_object.py  service_level_object.py  (+1 more)
backend/app/supabase/: __init__.py  auth.py  client.py  storage.py
backend/app/utils/: auth.py  config.py  example_model.py  logger.py  supabase_config.py  tools.py
backend/config/templates/: mysql.yaml  oracle.yaml  sftp.yaml
backend/docs/: mkdocs.yml
backend/docs/plugins/: griffe_doclinks.py
backend/supabase/: README.md  docker-compose.yml  init.sql
backend/supabase/config/: .env.example  init.sql
backend/supabase/docker/: Dockerfile.supabase
backend/tests/: tools_test.py
(+158 files in other folders)
