[tool.poetry]
name = "mycelium"
version = "1.0.0"
description = "Backend for Mycelium, handling data contracts and ingestion"
authors = ["ThomasGraff <thomas.graff@servier.com>", "victor <victorgoubet@orange.fr>"]
license = "AGPL-3.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
pydantic = {extras = ["email"], version = "^2.9.2"}
mkdocs-material = {extras = ["imaging"], version = "^9.5.41"}
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}
griffe-fieldz = "^0.2.0"
mike = "^2.1.3"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
