[tool.poetry]
name = "mycelium"
version = "1.0.0"
description = "Backend for Mycelium, handling data contracts and ingestion"
authors = ["ThomasGraff <thomas.graff@servier.com>", "victor <victorgoubet@orange.fr>"]
license = "AGPL-3.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
httpx = "^0.27.2"
supabase = "^2.4.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
