[tool.poetry]
name = "mycelium"
version = "1.0.0"
description = "Backend for Mycelium, handling data contracts and ingestion"
authors = ["ThomasGraff <thomas.graff@servier.com>", "victor <victorgoubet@orange.fr>"]
license = "AGPL-3.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
pydantic = {extras = ["email"], version = "^2.9.2"}
black = "^24.10.0"
httpx = "^0.27.2"
authlib = "^1.3.2"
pytest-asyncio = "^0.24.0"
pycryptodome = "^3.21.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
